add code for task 1

--- a/Lesson 1/Task 1/index.html
+++ b/Lesson 1/Task 1/index.html
@@ -9,3 +9,7 @@
     
 </body>
 </html>
+<h1>hello world</h1>
+<h2>my name is mick</h2>
+<h3>i had to add another heading</h3>
+<p>I am a student at Crumlin Youthreach</p>
